[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bt_api_coinone"
version = "0.1.0"
description = "Coinone exchange plugin for bt_api"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "cloudQuant", email = "yunjinqi@gmail.com" }]
keywords = ["bt_api", "coinone", "exchange", "trading"]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["bt_api_base>=0.1.0"]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api"
Documentation = "https://cloudquant.github.io/bt_api/"

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/bt_api_coinone"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
  "I",     # isort
  "UP",    # pyupgrade
  "F",     # pyflakes
  "E",     # pycodestyle error
  "W",     # pycodestyle warning
  "TC",    # type checking imports
  "SIM",   # simplify
]
ignore = [
  "TC002",  # type-checking imports - allow runtime imports
  "TC004",  # CustomTypedDict
  "SIM102", # Nested if statements
  "SIM108", # Use ternary
  "E501",   # Line too long - use formatter
]

[tool.ruff.lint.isort]
known-first-party = ["bt_api_coinone"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
